k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-app
  labels:
    app: nestjs
spec:
  selector:
    app: nestjs
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
